fix: code smell 수정